--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,16 +1,35 @@
 h1 {
 	display: flex;
 	justify-content: center;
+
+	margin: 2em;
+
+}
+
+h1 button {
+	padding: .5em .7em .5em 1em;
 	font-family: fontBold;
 	text-transform: uppercase;
-	font-size: 140%;
-	margin: 2em;
+	font-size: 100%;
+
 }
+
+h1 button:focus {
+	border-color: var(--color-hover);
+}
+
+
+h1 button img {
+	width: 1em;
+	height: 1em;
+}
+
 
 li {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+
 }
 
 li img {
@@ -18,7 +37,8 @@ li img {
 	height: 17em;
 	display: flex;
 	margin-bottom: 3em;
-	
+
+
 }
 
 li h2 {
@@ -28,6 +48,8 @@ li h2 {
 	margin: 2%;
 	display: flex;
 	color: var(--color-donkerGrijs);
+
+
 
 }
 
@@ -39,3 +61,14 @@ ul {
 
 }
 
+
+
+@keyframes pijl {
+	0% {
+		rotate: 0deg;
+	}
+
+	100% {
+		rotate: 180deg;
+	}
+}
