--- a/styles/style.css
+++ b/styles/style.css
@@ -31,8 +31,6 @@
 
 
 
-
-
 /*********************/
 /* CUSTOM PROPERTIES */
 /*********************/
@@ -44,9 +42,12 @@
 	--color-donkerGrijs: #3A3A3A;
 	--color-headerTekst: grey;
 	--color-footer: black;
+	--color-hover: blue;
+	--color-focus: #FFFACD;
+	--color-active: red;
+	--color-focusFooter: #2e8540;
+
 }
-
-
 
 
 
@@ -57,8 +58,34 @@
 /* jouw code */
 
 a {
-	text-decoration: none;
+	color: var(--color-donkerGrijs);
 }
+
+a:hover {
+	color: var(--color-hover);
+}
+
+main a:focus,
+header a:focus {
+	background-color: var(--color-focus);
+}
+
+a:active {
+	color: var(--color-active);
+}
+
+footer a:focus {
+	background-color: var(--color-focusFooter);
+}
+
+footer a:active {
+	color: var(--color-active);
+}
+
+/* h1 button:focus { */
+/* background-color: var(--color-focus); */
+/* } */
+
 
 header p {
 	background-color: var(--color-donkerGrijs);
@@ -73,56 +100,124 @@ header p {
 	font-family: fontBold;
 }
 
+
+header nav:nth-of-type(1)>a {
+	z-index: 100;
+}
+
+header>button {
+	z-index: 100;
+	margin: 1em;
+
+}
+
+
 header nav:nth-of-type(1) {
-	font-family: fontBold;
-	color: var(--color-donkerGrijs);
-	text-transform: uppercase;
-	font-weight: 200;
+	position: fixed;
+	transform: translateX(-100%);
+	transition: .5s;
+	background-color: var(--color-background);
+	top: 0;
+	bottom: 0;
+	padding-top: 5em;
 
 }
 
 header nav:nth-of-type(1) li {
-	margin-left: 2em;
+	font-family: fontRoman;
+	text-transform: uppercase;
+	font-weight: 800;
+	top: 4em;
+
 }
 
-header section img {
+header nav:nth-of-type(1) ul {
+	margin: 3em;
+
+}
+
+
+
+header nav.open {
+	transform: translateX(0%);
+
+}
+
+
+header section:nth-of-type(1) img:nth-child(1) {
 	width: 5em;
 	height: 4em;
 	position: fixed;
 	top: 5em;
+
 }
 
-header section li {
+header section:nth-of-type(1) img:nth-child(2) {
+	width: 1em;
+	height: 1em;
+	position: fixed;
+	top: 5em;
+
+}
+
+header section:nth-of-type(1) img:nth-child(3) {
+	width: 1em;
+	height: 1em;
+	position: fixed;
+	top: 5em;
+}
+
+header section:nth-of-type(1) img:nth-child(4) {
+	width: 1em;
+	height: 1em;
+	position: fixed;
+	top: 5em;
+}
+
+header section:nth-of-type(1) li {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+
 }
+
+header section:nth-of-type(1) ul {
+	display: flex;
+	flex-direction: row;
+	left: 0;
+	right: 0;
+	align-items: center;
+	justify-content: center;
+	margin: 0;
+	padding: 0;
+}
+
+
 
 
 header nav:nth-of-type(2) ul {
 	display: flex;
 	gap: 3em;
 	overflow-x: auto;
-	margin: 1em;
-
-
-}
-
-header nav:nth-of-type(2) li a {
-
-	color: var(--color-donkerGrijs);
+	margin-left: 2em;
+	margin-top: 5em;
 
 }
+
+/* header nav:nth-of-type(2) li a { */
+/* color: var(--color-donkerGrijs); */
+/* } */
 
 header nav:nth-of-type(2) li {
 	display: flex;
 	flex-shrink: 0;
 	font-size: 100%;
-	font-weight: 700;
-	font-family: fontRoman;
+	font-weight: 800;
+	font-family: fontBold;
 	text-transform: uppercase;
 
 }
+
 
 
 footer {
@@ -130,49 +225,114 @@ footer {
 
 }
 
-footer h2 {
+
+footer section h2 {
 	color: var(--color-wittekst);
 	font-family: fontNormaal;
-
+	margin: 0;
 }
 
-footer img {
+footer section p {
+	color: var(--color-wittekst);
+	position: absolute;
+	left: -9999em;
+	padding: .7em 1em 1em 3em;
+	font-family: fontRoman;
+	position: static;
+	font-size: 170%;
+	margin-top: -2em;
+}
+
+footer h2 img {
 	display: flex;
+	margin: 3em;
+	width: 6em;
+	height: 5em;
 
 }
+
+footer nav {
+	padding: 1em;
+
+}
+
+
+footer section {
+	grid-row-start: 1;
+	grid-row-end: 3;
+}
+
 
 footer li {
-	color: var(--color-wittekst);
 	text-transform: uppercase;
 	font-family: fontBold;
 	padding: .7em 1em 1em 3em;
 
 }
 
-label{
-	color:var(--color-wittekst);
+footer a {
+	color: var(--color-wittekst);
+}
+
+label {
+	color: var(--color-wittekst);
+	font-family: fontBold;
+	font-size: 2em;
+}
+
+footer form {
+	padding: 2em;
+	margin: 2em;
+}
+
+footer input {
+	width: 20em;
+	margin-top: 1em;
+	display: flex;
+	flex-direction: column;
+
+}
+
+footer button {
+	display: flex;
+	flex-wrap: nowrap;
+}
+
+footer a:hover {
+	color: var(--color-hover);
 }
 
 
+@media ((width > 48em)) {
+	footer {
+		display: grid;
+		grid-template-columns: 40% 60%;
+	}
 
-
-@media (min-width: 60em) {
 	header section img {
 		height: 5em;
 		width: 7em;
 	}
-}
 
-@media (min-width: 60em) {
 	header nav:nth-of-type(2) li {
 		margin-left: 2em;
-
 	}
-}
 
-@media (min-width: 65em) {
-	footer {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
+	footer section p {
+		left: 0;
 	}
+
+	header nav:nth-of-type(2) ul {
+		gap: 1em;
+		justify-content: center;
+	}
+
+	footer nav ul {
+		margin: 0;
+		height: 30em;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
+
 }
