--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,7 @@
 	--color-donkerGrijs: #3A3A3A;
 	--color-headerTekst: grey;
 	--color-footer: black;
+	--color-border: black;
 	--color-hover: blue;
 	--color-focus: #FFFACD;
 	--color-active: red;
@@ -76,6 +77,11 @@ footer a:active {
 	color: var(--color-active);
 }
 
+footer a:hover,
+footer a p:hover {
+	color: var(--color-hover);
+}
+
 button {
 	cursor: pointer;
 }
@@ -115,7 +121,7 @@ header section:first-of-type h1 {
 }
 
 /* hamburgermenu */
-header nav:nth-of-type(1)>a {
+header nav:nth-of-type(2)>a {
 	z-index: 9999;
 }
 
@@ -155,7 +161,7 @@ header button:hover span:nth-of-type(3) {
 
 /* https://codepen.io/shooft/live/NWePYRO */
 
-header nav:nth-of-type(1) {
+header nav:nth-of-type(2) {
 	position: fixed;
 	transform: translateX(-100%);
 	transition: .5s;
@@ -168,7 +174,7 @@ header nav:nth-of-type(1) {
 
 }
 
-header nav:nth-of-type(1) li {
+header nav:nth-of-type(2) li {
 	font-family: fontBold;
 	text-transform: uppercase;
 	font-weight: 800;
@@ -178,101 +184,86 @@ header nav:nth-of-type(1) li {
 	list-style-type: none;
 }
 
-header nav:nth-of-type(1) ul {
+header nav:nth-of-type(2) ul {
 	margin: 3em;
 }
 
-header nav.open {
+header nav:nth-of-type(2).open {
 	transform: translateX(0%);
 }
 
 /* iconen */
-header section:nth-child(2) h2 {
+header nav:nth-child(2) h2 {
 	position: relative;
 	left: -9999em;
 	position: fixed;
 }
 
-header section:nth-child(2) li:nth-of-type(1) p:nth-of-type(1) {
+select {
 	position: relative;
-	left: 14.5em;
-	font-family: fontBold;
-	font-weight: 200;
-	top: 1.3em;
+	left: 4em;
 }
 
-header section:nth-child(2) li:nth-of-type(1) img {
-	width: 2em;
-	height: 1.5em;
-	left: 12em;
-	display: flex;
-	position: relative;
+header nav:nth-child(2) img:nth-child(1) {
+	width: 6em;
+	height: 5em;
+	
 }
 
-
-
-header section:nth-child(2) li:nth-of-type(2) img {
-	width: 8em;
-	height: 6em;
-	left: 38em;
-	display: flex;
-	position: relative;
-
-}
-
-
-header section:nth-child(2) li:nth-of-type(3) img {
+header nav:nth-child(2) li:nth-of-type(1) img {
 	width: 2em;
 	height: 2em;
-	left: 62em;
-	display: flex;
-	position: relative;
-
 }
 
-header section:nth-child(2) li:nth-of-type(4) img {
+header nav:nth-child(2) li:nth-of-type(2) img {
 	width: 2em;
 	height: 2em;
-	left: 62em;
-	display: flex;
-	position: relative;
-
 }
 
-header section:nth-child(2) li:nth-of-type(5) img {
+header nav:nth-child(2) li:nth-of-type(3) img {
 	width: 2em;
 	height: 2em;
-	left: 62em;
-	display: flex;
-	position: relative;
 }
 
-header section:nth-child(2) li {
-	margin: 1em;
-
-}
-
-header section:nth-child(2) ul {
-	list-style: none;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
+header nav:nth-child(2) {
 	position: fixed;
-	z-index: 900;
+	left: 0;
+	right: 0;
+	top: 3em;
+	display: flex;
+	gap: .5em;
+	align-items: center;
+	padding: 1em;
+	z-index: 999;
 }
+
+header nav:nth-child(2)>a {
+	margin: auto;
+
+}
+
+header nav:nth-child(2) ul {
+	display: flex;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+/* https://codepen.io/shooft/pen/oNJQoRv */
+
 
 /* slider nav */
 /* https://dlo.mijnhva.nl/content/enforced/536487-FDMCI-2000FED121-DMCI-CMD-2324/FED%2023-24%20-%20Blok%201%20-%20Oefening%20flexbox.pdf */
-header nav:nth-of-type(2) ul {
+header nav:nth-of-type(3) ul {
 	display: flex;
 	gap: 3em;
 	overflow-x: auto;
 	margin-left: 2em;
-	margin-top: 10em;
-
+	margin-top: 8em;
+	margin-bottom: 2em;
 }
 
-header nav:nth-of-type(2) li {
+header nav:nth-of-type(3) li {
 	display: flex;
 	flex-shrink: 0;
 	font-size: 100%;
@@ -286,7 +277,6 @@ footer {
 	background-color: var(--color-footer);
 
 }
-
 
 footer section h2 {
 	color: var(--color-wittekst);
@@ -316,7 +306,6 @@ footer h2 img {
 	margin: 3em;
 	width: 6em;
 	height: 5em;
-
 }
 
 footer nav {
@@ -337,7 +326,6 @@ footer li {
 	text-transform: uppercase;
 	font-family: fontBold;
 	padding: .7em .2em 1.5em 3em;
-
 }
 
 footer a {
@@ -348,7 +336,6 @@ label {
 	color: var(--color-wittekst);
 	font-family: fontBold;
 	font-size: 2em;
-
 }
 
 footer form {
@@ -371,208 +358,15 @@ footer button {
 
 /* https://codepen.io/shooft/pen/qBLxdym?editors=1100 */
 
-footer a:hover,
-footer a p:hover {
-	color: var(--color-hover);
-}
-
-
-@media ((max-width: 45em)) {
-
-	header section:nth-child(2) li:nth-of-type(1) p:nth-of-type(1) {
-		left: 9.5em;
-		top: 2em;
-	}
-
-	header section:nth-child(2) li:nth-of-type(1) img {
-		left: 7em;
-		top: .5em;
-	}
-
-	header section:nth-child(2) li:nth-of-type(2) img {
-		width: 5em;
-		height: 4em;
-		left: 12em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(3) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 17em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(4) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 16em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(5) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 15em;
-		top: 1em;
-	}
-
-}
-
-@media ((max-width: 40em)) {}
-
-
-
-@media ((max-width: 40em)) {
-
-	header section:nth-child(2) li:nth-of-type(1) p:nth-of-type(1) {
-		left: 8.5em;
-		top: 2em;
-	}
-
-	header section:nth-child(2) li:nth-of-type(1) img {
-		left: 6em;
-		top: .5em;
-	}
-
-	header section:nth-child(2) li:nth-of-type(2) img {
-		width: 5em;
-		height: 4em;
-		left: 9em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(3) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 11em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(4) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 10em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(5) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 9em;
-		top: 1em;
-	}
-}
-
-
-@media ((max-width: 47.75em)) {
-
-	header section:nth-child(2) li:nth-of-type(1) p:nth-of-type(1) {
-		left: 9.5em;
-		top: 2em;
-	}
-
-	header section:nth-child(2) li:nth-of-type(1) img {
-		left: 7em;
-		top: .5em;
-	}
-
-	header section:nth-child(2) li:nth-of-type(2) img {
-		width: 5em;
-		height: 4em;
-		left: 15em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(3) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 24em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(4) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 23em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(5) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 22em;
-		top: 1em;
-	}
-
-
-
-}
-
-
-@media ((max-width: 28em)) {
-	header section:nth-child(2) li:nth-of-type(1) p:nth-of-type(1) {
-		left: 7em;
-		top: 2em;
-	}
-
-	header section:nth-child(2) li:nth-of-type(1) img {
-		left: 7em;
-		top: .5em;
-	}
-
-	header section:nth-child(2) li:nth-of-type(2) img {
-		width: 5em;
-		height: 4em;
-		left: 7em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(3) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 8em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(4) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 7em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(5) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 6em;
-		top: 1em;
-	}
-
-
-}
-
 
 @media ((width > 48em)) {
 
-	header nav:nth-of-type(2) li {
+	header nav:nth-of-type(3) li {
 		margin-left: 2em;
 	}
 
 
-	header nav:nth-of-type(2) ul {
+	header nav:nth-of-type(3) ul {
 		gap: 1em;
 		justify-content: center;
 	}
@@ -594,46 +388,6 @@ footer a p:hover {
 
 @media ((width < 25em)) {
 
-	header section:nth-child(2) li:nth-of-type(1) p:nth-of-type(1) {
-		left: 6.6em;
-		top: 2em;
-	}
-
-	header section:nth-child(2) li:nth-of-type(1) img {
-		left: 4em;
-		top: .5em;
-	}
-
-	header section:nth-child(2) li:nth-of-type(2) img {
-		width: 5em;
-		height: 4em;
-		left: 4.5em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(3) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 3em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(4) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 2em;
-		top: 1em;
-
-	}
-
-	header section:nth-child(2) li:nth-of-type(5) img {
-		width: 1.5em;
-		height: 1.5em;
-		left: 1em;
-		top: 1em;
-	}
 
 	footer section p {
 		left: -9999em;
@@ -644,6 +398,11 @@ footer a p:hover {
 		background-color: var(--color-footer);
 		top: 3em;
 		position: relative;
+	}
+
+	header nav:nth-child(2) img:nth-child(1) {
+		width: 5em;
+		height: 4em;
 	}
 
 }
